--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tiny PDF</title>
+    <%- include('inc/head') %>
   </head>
   <body>
-    Welcome to Tiny PDF
+    <%- include('inc/navbar') %>
+    <main class="py-5">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-8 col-md-10">
+            <h1 class="">Tiny PDF Compressor</h1>
+            <p class="lead text-muted">
+              Upload your PDF file, and we will compress it for you.
+            </p>
+
+            <form
+              id="uploadForm"
+              action="/pdf"
+              method="post"
+              enctype="multipart/form-data"
+              class="border p-4 rounded shadow-sm bg-light"
+            >
+              <div class="mb-3">
+                <label for="pdfFile" class="form-label fw-bold">
+                  Select your PDF file
+                </label>
+                <input
+                  class="form-control"
+                  type="file"
+                  id="pdfFile"
+                  name="pdf"
+                  accept="application/pdf"
+                  required
+                />
+              </div>
+
+              <button type="submit" class="btn btn-primary">
+                <span
+                  class="spinner-grow spinner-grow-sm d-none"
+                  role="status"
+                  aria-hidden="true"
+                ></span>
+                Compress PDF
+              </button>
+            </form>
+
+            <div
+              class="progress mt-3 d-none"
+              role="progressbar"
+              aria-label="Upload Progress"
+              aria-valuenow="0"
+              aria-valuemin="0"
+              aria-valuemax="100"
+              id="progress"
+            >
+              <div class="progress-bar" style="width: 0%">0%</div>
+            </div>
+
+            <div id="message" class="mt-3 fw-bold text-danger"></div>
+
+            <div class="mt-3">
+              <a id="original" class="btn btn-secondary d-none" target="_blank"
+                >View Original</a
+              >
+              <a id="compressed" class="btn btn-success d-none" target="_blank"
+                >Download Compressed</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <%- include('inc/footer') %>
   </body>
 </html>
